# linux_ipc_project

./: .gitignore  CMakeLists.txt  README.md
src/: client.cpp  client.h  main.cpp  server.cpp  start.sh
